--- a/Program/SearchRequestWindow.xaml
+++ b/Program/SearchRequestWindow.xaml
@@ -23,7 +23,13 @@
             </DataGrid.CellStyle>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Width="8*" Binding="{Binding Name}"  FontSize="17"/>
-                <DataGridTextColumn Header="Value" Width="8*" Binding="{Binding Value}" FontSize="17"/>
+                <DataGridTextColumn Header="Value" Width="8*" Binding="{Binding Value}" FontSize="17">
+                    <DataGridTextColumn.CellStyle>
+                        <Style TargetType="DataGridCell">
+                            <Setter Property="ToolTip" Value="Input &quot;&quot; to search any value" />
+                        </Style>
+                    </DataGridTextColumn.CellStyle>
+                </DataGridTextColumn>
                 <DataGridTemplateColumn Width="2*">
                     <DataGridTemplateColumn.CellStyle>
                         <Style TargetType="{x:Type DataGridCell}">
