--- a/Program/CollectionWindow.xaml
+++ b/Program/CollectionWindow.xaml
@@ -30,10 +30,10 @@
                 </TransformGroup>
             </Separator.RenderTransform>
         </Separator>
-        <ListView Name="DataUnitsList" Margin="10,4,10,9" Grid.ColumnSpan="3" BorderBrush="Black" Grid.Row="2" HorizontalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListView SelectionChanged="SelectChanged" Name="DataUnitsList" Margin="10,4,10,9" Grid.ColumnSpan="3" BorderBrush="Black" Grid.Row="2" HorizontalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid  Margin="0,10,0,10">
+                    <Grid Margin="0,10,0,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
