--- a/Program/MainWindow.xaml
+++ b/Program/MainWindow.xaml
@@ -19,10 +19,10 @@
         </Grid.ColumnDefinitions>
         <Button x:Name="CreateCollectionButton" Content="Create collection" Margin="0,21,10,0" VerticalAlignment="Top" Height="39" FontSize="16" Click="CreateCollectionButton_Click" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="139" Background="#FF4BA9FF"/>
         <TextBlock Margin="10,23,0,0" Text="Collections" TextWrapping="Wrap" VerticalAlignment="Top" Height="39" FontSize="22" HorizontalAlignment="Left" Width="118"/>
-        <ListBox x:Name="CollectionsList" Margin="10,77,10,10" BorderBrush="Black" Grid.ColumnSpan="3" HorizontalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListBox  x:Name="CollectionsList" Margin="10,77,10,10" BorderBrush="Black" Grid.ColumnSpan="3" HorizontalContentAlignment="Stretch" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Border BorderBrush="{x:Null}">
+                    <Border BorderThickness="1" BorderBrush="Black">
                         <ContentControl MouseDoubleClick="OpenCollection">
                             <TextBlock Text="{Binding Name}" FontSize="17" Height="32" Padding="5" VerticalAlignment="Center"/>
                         </ContentControl>
